--- a/app/src/main/res/xml/fragment_detail_scene.xml
+++ b/app/src/main/res/xml/fragment_detail_scene.xml
@@ -1,31 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <ConstraintSet android:id="@+id/start">
-        <Constraint
-            android:id="@+id/cl_for_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </ConstraintSet>
+    <ConstraintSet android:id="@+id/start" />
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@id/cl_for_text"
+            android:id="@+id/fileName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="@dimen/_20dp"
+            android:layout_marginTop="@dimen/_20dp"
+            android:alpha="1"
+            app:layout_constraintEnd_toStartOf="@+id/downloadedFileName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Constraint
+            android:id="@+id/downloadedFileName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_15dp"
+            android:alpha="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fileName"
+            app:layout_constraintTop_toTopOf="@id/fileName" />
+
+        <Constraint
+            android:id="@+id/status"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_20dp"
+            android:layout_marginTop="@dimen/_20dp"
+            android:alpha="1"
+            app:layout_constraintEnd_toStartOf="@+id/downloadStatus"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/downloadedFileName" />
+
+        <Constraint
+            android:id="@+id/downloadStatus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_15dp"
+            android:alpha="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/status"
+            app:layout_constraintTop_toTopOf="@id/status" />
+
     </ConstraintSet>
 
     <Transition
         app:autoTransition="animateToEnd"
         app:constraintSetEnd="@id/end"
         app:constraintSetStart="@+id/start"
-        app:duration="300" />
+        app:duration="1000">
+        <KeyFrameSet>
+            <KeyPosition
+                app:framePosition="60"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/button"
+                app:percentY=".8" />
+            <KeyPosition
+                app:framePosition="80"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/button"
+                app:percentY="1" />
+            <KeyPosition
+                app:framePosition="90"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/button"
+                app:percentY=".9" />
+            <KeyPosition
+                app:framePosition="95"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/button"
+                app:percentY="1" />
+            <KeyPosition
+                app:framePosition="97"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/button"
+                app:percentY=".95" />
+            <KeyPosition
+                app:framePosition="98"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/button"
+                app:percentY="1" />
+            <KeyPosition
+                app:framePosition="99"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/button"
+                app:percentY=".98" />
+        </KeyFrameSet>
+    </Transition>
 </MotionScene>
